--- a/pug/index.pug
+++ b/pug/index.pug
@@ -5,8 +5,8 @@ doctype html
 html(lang='en')
   head
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    link(rel='stylesheet', href='css/style.css')
-    script(src='js/main.js')
+    link(rel='stylesheet', href='css/style.min.css')
+    script(src='js/main.min.js')
     title= 'Zveno — Агентство по подбору Digital и IT-профессионалов'
   body
     include ./nav.pug
